--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,11 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+p {
+  max-width: 50vw;
+  font-size: 20px;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
