--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,8 +1,9 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 15px;
   padding: 6rem;
   min-height: 100vh;
 }
